--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,4 +1,4 @@
-
+/*
 .highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
@@ -9,9 +9,10 @@
   margin: 20px 0 20px 0;
   overflow: scroll;
 }
+*/
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
