--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,5 +1,4 @@
-/*
-.highlight {
+div.highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
@@ -9,7 +8,6 @@
   margin: 20px 0 20px 0;
   overflow: scroll;
 }
-*/
 
 code {
   font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
