--- a/style.scss
+++ b/style.scss
@@ -253,12 +253,9 @@ nav {
 
 .post {
   blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
+   border-left: .25em solid #dfe2e5;
+   color: #6a737d;
+   padding: 0 1em;	  
   }
 
   .comments {
